23.jul (lv)
      - fix #11226 MusicXML exports treble clefs only
      - fix crash when importing musicxml lyrics
      - remove spurious "Unknown Node <staff>" or "... <voice>" messages on MusicXML import
22.jul (lv)
      - fix #10849: musicxml exports lyrics only with notes in voice 1
21.jul
      - Element->canvasPos() is now page relative; Page->canvasPos() is zero for all pages
      (la)
      - fix #11605: Shift-X with measure selected -> crash
20.jul (lv)
      - fix #11245: MusicXML doesn't save Tempo Text if there's no name
      - fix #11441: Failure to read MusicXML file with missing parts
      - fix MusicXML import/export of notehead color
      - add MusicXML testfile for noteheads
18.jul (ws)
      - fix #11530: Creation from template partially broken
      - fix #11554: In "Single Palette Mode" the previous palette collapses only
        half way (patch from mokaspar)
      - #11558: pinch gesture for zooming in and out (patch from mokaspar)
      - fix #11524: no more recent files (patch from mokaspar)
      - fix #11108: Clicking on Piano Keyboard with no score causes crash
      - fix #11565: closing drumset after closing score causes crash
      - fix #11557: slow scroll events on the scoreview get lost
        (patch from mokaspar)
14.jul (ws)
      - fix #6380: Conflicting flag directions for sub-beams
13.jul (ws)
      - fix #11469: Selecting "Time Signatures" in palette causes crash
      - fix non default profile: missing palette symbols
      - fix #11473: Preference values overwritten on program initialisation
11.jul (ws)
      - fix #9907: Pasting multiple rests (one with overlap) causes crash
      - fix #11446: template directory ignored
      - fix #10362: Backw. comp.: lyrics underscores from 1.0 are sometimes corrupted
        (patch from miwarre)
      - fix #11448: Cancel on Style/TextStyle dlg box crashes if no edits
        (patch from miwarre)
      - fix #10826: Notes exceeding measure contents corrupt measure total value